--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CREEDFX — Institutional Gold Trading</title>
-  <link rel="stylesheet" href="style.css>
+ <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -144,5 +144,6 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
